--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -274,71 +274,19 @@ $(document).ready(function () {
     
     </div> <!-- End Container -->
 
-  <!-- Footer Area
+ <!-- Footer Area
   ================================================== -->
 
-  <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
+  <div class="footer-container"><!-- Begin Footer -->
       <div class="container">
-          <div class="row footer-row">
-                <div class="span3 footer-col">
-                    <h5>About Us</h5>
-                    <address>
-                        <strong>The Austin Isms</strong><br />
-                        2317 Speedway, Stop D9500<br />
-                        Austin, TX 78712<br />
-                    </address>
-                    <ul class="social-icons">
-                        <li><a href="#" class="social-icon facebook"></a></li>
-                        <li><a href="#" class="social-icon twitter"></a></li>
-                        <li><a href="#" class="social-icon dribble"></a></li>
-                        <li><a href="#" class="social-icon rss"></a></li>
-                        <li><a href="#" class="social-icon forrst"></a></li>
-                    </ul>
-                </div>
-                <div class="span3 footer-col">
-                    <h5>Latest Tweets</h5>
-                    <ul>
-                        <li><a href="#">@room122</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li><a href="#">@room122</a> In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Morbi blandit ultricies ultrices.</li>
-                        <li><a href="#">@room122</a> Vivamus nec lectus sed orci molestie molestie. Etiam mattis neque eu orci rutrum aliquam.</li>
-                    </ul>
-                </div>
-                <div class="span3 footer-col">
-                    <h5>Latest Posts</h5>
-                     <ul class="post-list">
-                        <li><a href="#">Lorem ipsum dolor sit amet</a></li>
-                        <li><a href="#">Consectetur adipiscing elit est lacus gravida</a></li>
-                        <li><a href="#">Lectus sed orci molestie molestie etiam</a></li>
-                        <li><a href="#">Mattis consectetur adipiscing elit est lacus</a></li>
-                        <li><a href="#">Cras rutrum, massa non blandit convallis est</a></li>
-                    </ul>
-                </div>
-                <div class="span3 footer-col">
-                    <h5>Flickr Photos</h5>
-                    <ul class="img-feed">
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                    </ul>
-                </div>
-            </div>
-
+        <br/>
             <div class="row"><!-- Begin Sub Footer -->
                 <div class="span12 footer-col footer-sub">
                     <div class="row no-margin">
                         <div class="span6"><span class="left">Copyright 2012 Piccolo Theme. All rights reserved.</span></div>
                         <div class="span6">
                             <span class="right">
-                            <a href="/">Home</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/funruns">Fun Events</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun Themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/locations">Fun Locations</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a>
+                            <a href="/">Home</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/funruns">Fun Events</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun Themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/challenges">Fun Challenges</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/locations">Fun Locations</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a>
                             </span>
                         </div>
                     </div>
