Fixed span size

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -216,7 +216,7 @@
 
             <h3 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h3>
             <div class="row">
-                <div class="span4">
+                <div class="span12">
                     <li>Python</li>
                     <p> Python is one of the languages used to help bring our application to life. Its functionality allows for easy data manipulation. In combination of other tools, its syntax provides for easier interpretation and cleaner presentation.</p>
                     <li>Flask</li>
@@ -239,7 +239,7 @@
                 </div>
             </div>
 
-            <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/>
+            <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
 
         </div> 
     </div>
