--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -217,24 +217,24 @@
             <h3 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h3>
             <div class="row">
                 <div class="span12">
-                    <li>Python</li>
+                    <li><strong>Python</strong></li>
                     <p> Python is one of the languages used to help bring our application to life. Its functionality allows for easy data manipulation. In combination of other tools, its syntax provides for easier interpretation and cleaner presentation.</p>
-                    <li>Flask</li>
+                    <li><strong>Flask</strong></li>
                     <p> Flask is a microframework for Python and serves as the foundation for our application. It uses Jinja2 templating and RESTful request dispatching. This tool helped facilitate our web application development process overall.</p>
-                    <li>Bootstrap</li>
+                    <li><strong>Bootstrap</strong></li>
                      <p> Bootstrap is an open source framework that uses HTML, CSS, and JS. It helped both speed up and ease our front end development because of how flexible it is. </p>
-                    <li>Piccolo</li>
-                    <p> Piccolo is a bootstrap HTML template. We implemented this tool to enhance the presentation of our application and give it a more aestethically appealing appearance.</p>
-                    <li>nginx</li>
+                    <li><strong>Piccolo</strong></li>
+                    <p> Piccolo is a bootstrap HTML template. We implemented this tool to enhance the presentation of our application and give it a more aesthethically pleasing appearance.</p>
+                    <li><strong>nginx</strong></li>
                     <p> nginx is a high-performance HTTP server and reverse proxy. This tool was used to serve our application by handling the requests sent by our API. </p>
-                    <li>uwsgi</li>
+                    <li><strong>uwsgi</strong></li>
                     <p> uWSGI is a deployment option for severs. Because we decided to use nginx, combining it with uWSGI gives us more flexibility and better performance because of the configurations it offers.  </p>
-                    <li>Apiary</li>
-                    <p> Apiary is a tool that allowed for an easier,faster and more efficient creation of our API. It offers different tools to prototype your API and configure it to your liking. </p>
-                    <li>Github</li>
+                    <li><strong>Apiary</strong></li>
+                    <p> Apiary is a tool that allowed for an easier, faster and more efficient creation of our API. It offers different tools to prototype your API and configure it to your liking. </p>
+                    <li><strong>Github</strong></li>
                     <p> Github is a web-based Git repository. Since the project is being worked on
-                    by several team members concurrently, it allows for more efficient contributions towards the overall project. In addition, it helps simulate a real world environment of software development. </p>
-                    <li>Rackspace</li>
+                    by several team members concurrently, it allows for more efficient contributions towards the overall project. In addition, it helps simulate a real world environment of software development and version control. </p>
+                    <li><strong>Rackspace</strong></li>
                     <p> Rackspace has allowed our team to host our application using one of their virtual machines which has 1gb RAM and 20gb of storage. </p>
                 </div>
             </div>
