Fixed footed area in about.html to match other pages

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -153,7 +153,7 @@
                     <h5>Kevin Byers</h5>
                     <p>
                         <i class="icon-user"></i><strong>Seelio:</strong> <a href="http://seelio.com/kevinbyers"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> kevin.byers.tennis@gmail.com</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:kevin.byers.tennis@gmail.com"> kevin.byers.tennis@gmail.com</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
                         <i class="icon-gift"></i><strong>Birthday:</strong> June 25, 1991<br/>
@@ -170,7 +170,7 @@
                     </div>
                     <h5>David Aguirre</h5>
                     <p>
-                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="www.linkedin.com/in/daguirre92"> Click Here</a><br/>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/daguirre92"> Click Here</a><br/>
                         <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:david.aguirre@utexas.edu"> david.aguirre@utexas.edu</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science and Economics<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
@@ -249,61 +249,9 @@
     <!-- Footer Area
         ================================================== -->
 
-    <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
+  <div class="footer-container"><!-- Begin Footer -->
       <div class="container">
-          <div class="row footer-row">
-                <div class="span3 footer-col">
-                    <h5>About Us</h5>
-                    <address>
-                        <strong>The Austin Isms</strong><br />
-                        2317 Speedway, Stop D9500<br />
-                        Austin, TX 78712<br />
-                    </address>
-                    <ul class="social-icons">
-                        <li><a href="#" class="social-icon facebook"></a></li>
-                        <li><a href="#" class="social-icon twitter"></a></li>
-                        <li><a href="#" class="social-icon dribble"></a></li>
-                        <li><a href="#" class="social-icon rss"></a></li>
-                        <li><a href="#" class="social-icon forrst"></a></li>
-                    </ul>
-                </div>
-                <div class="span3 footer-col">
-                    <h5>Latest Tweets</h5>
-                    <ul>
-                        <li><a href="#">@room122</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li><a href="#">@room122</a> In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Morbi blandit ultricies ultrices.</li>
-                        <li><a href="#">@room122</a> Vivamus nec lectus sed orci molestie molestie. Etiam mattis neque eu orci rutrum aliquam.</li>
-                    </ul>
-                </div>
-                <div class="span3 footer-col">
-                    <h5>Latest Posts</h5>
-                     <ul class="post-list">
-                        <li><a href="#">Lorem ipsum dolor sit amet</a></li>
-                        <li><a href="#">Consectetur adipiscing elit est lacus gravida</a></li>
-                        <li><a href="#">Lectus sed orci molestie molestie etiam</a></li>
-                        <li><a href="#">Mattis consectetur adipiscing elit est lacus</a></li>
-                        <li><a href="#">Cras rutrum, massa non blandit convallis est</a></li>
-                    </ul>
-                </div>
-                <div class="span3 footer-col">
-                    <h5>Flickr Photos</h5>
-                    <ul class="img-feed">
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                        <li><a href="#"><img src="{{ url_for('static', filename='img/gallery/flickr-img-1.jpg') }}" alt="Image Feed"></a></li>
-                    </ul>
-                </div>
-            </div>
-
+        <br/>
             <div class="row"><!-- Begin Sub Footer -->
                 <div class="span12 footer-col footer-sub">
                     <div class="row no-margin">
