Fixed footers again and then added angular and jinja

--- a/app/templates/funruntempl.html
+++ b/app/templates/funruntempl.html
@@ -272,7 +272,7 @@ $(document).ready(function () {
  <!-- Footer Area
   ================================================== -->
 
-  <div class="footer-container"><!-- Begin Footer -->
+  <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
       <div class="container">
         <br/>
             <div class="row"><!-- Begin Sub Footer -->
