--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -227,7 +227,7 @@
                     <p> Piccolo is a bootstrap HTML template. We implemented this tool to enhance the presentation of our application and give it a more aesthethically pleasing appearance.</p>
                     <li><strong>nginx</strong></li>
                     <p> nginx is a high-performance HTTP server and reverse proxy. This tool was used to serve our application by handling the requests sent by our API. </p>
-                    <li><strong>uwsgi</strong></li>
+                    <li><strong>uWSGI</strong></li>
                     <p> uWSGI is a deployment option for severs. Because we decided to use nginx, combining it with uWSGI gives us more flexibility and better performance because of the configurations it offers.  </p>
                     <li><strong>Apiary</strong></li>
                     <p> Apiary is a tool that allowed for an easier, faster and more efficient creation of our API. It offers different tools to prototype your API and configure it to your liking. </p>
@@ -236,6 +236,10 @@
                     by several team members concurrently, it allows for more efficient contributions towards the overall project. In addition, it helps simulate a real world environment of software development and version control. </p>
                     <li><strong>Rackspace</strong></li>
                     <p> Rackspace has allowed our team to host our application using one of their virtual machines which has 1gb RAM and 20gb of storage. </p>
+                    <li><strong>AngularJS</strong></li>
+                    <p> Angular is a web application framework that allows us to dynamically fill the pages with content. We utilized Angular by calling GET on our RESTful API and using the content to fill a template page for each race/theme/challenge. It has been a great tool for separating our front end from the back end.</p>
+                    <li><strong>Jinja2</strong></li>
+                    <p> Jinja is a templating framework that comes with Flask. It allows us to push information through our funruns app file straight to the page, but is not a good way to decouple the front end from the back end. Therefore, it is used sparingly and only in the template pages to provide an ID of what page to load.</p>
                 </div>
             </div>
 
@@ -249,7 +253,7 @@
     <!-- Footer Area
         ================================================== -->
 
-  <div class="footer-container"><!-- Begin Footer -->
+  <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
       <div class="container">
         <br/>
             <div class="row"><!-- Begin Sub Footer -->
