--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -171,7 +171,7 @@
  <!-- Footer Area
   ================================================== -->
 
-  <div class="footer-container"><!-- Begin Footer -->
+  <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
       <div class="container">
         <br/>
             <div class="row"><!-- Begin Sub Footer -->
