--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -20,10 +20,10 @@
 
 <!-- Favicons
 ================================================== -->
-<link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
-<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
-<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/icon.jpg') }}">
-<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.png') }}">
+<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon.png') }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/icon.png') }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/icon.png') }}">
 
 <!-- Favicons
 ================================================== -->
