--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -50,6 +50,7 @@
     });  
 });
 </script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </head>
 
@@ -216,7 +217,6 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Classical, DnB<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Gaming, Soccer, Anime<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> _(┐「ε:)_<br/>
-                        <br><br/>
                         <hr style="border: 1px outset #595955;"/>
                         <i class="icon-cog"></i><strong>Commits: </strong>13 <br/>
                         <i class="icon-list"></i><strong>Issues: </strong>10 <br/>
@@ -279,6 +279,10 @@
             <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
 	    <a href="http://docs.funruns2k15.apiary.io/"> Apiary</a><br/><br/>
         </div> 
+
+        <div class="span6">
+            <a class="twitter-timeline" href="https://twitter.com/FlaskMeAnything/lists/fun-runs" data-widget-id="582725442076983296" data-theme="dark">Tweets from https://twitter.com/FlaskMeAnything/lists/fun-runs</a>
+        </div>
     </div>
     
     </div> <!-- End Container -->
