Making landing pages dynamic

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -275,6 +275,9 @@
                     <p> Jinja is a templating framework that comes with Flask. It allows us to push information through our funruns app file straight to the page, but is not a good way to decouple the front end from the back end. Therefore, it is used sparingly and only in the template pages to provide an ID of what page to load.</p>
                 </div>
             </div>
+            <div>
+                <p>Total Github Commits 270</p>
+            </div>
 
             <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
 	    <a href="http://docs.funruns2k15.apiary.io/"> Apiary</a><br/><br/>
