--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -209,14 +209,13 @@ $(document).ready(function () {
     <div class="span6">
 
          <h5 class="title-bg">Featured run
-            <small></small>
         </h5>
 
               <div class="active item">
-                  <a href="funruns/0"><img src="{{ url_for('static', filename='img/landing/funruns/wipeoutLanding.jpg') }}" alt="" class="align-left blog-thumb-preview" width=40% height=40%/></a>
+                  <a class="hidden-tablet hidden-phone" href="funruns/0"><img src="{{ url_for('static', filename='img/landing/funruns/wipeoutLanding.jpg') }}" alt="" class="align-left blog-thumb-preview" width=40% height=40%/></a>
                   <div class="post-info clearfix">
                       <h4><a href="funruns/0">Wipeout Run</a></h4>
-                      <ul class="blog-details-preview">
+                      <ul>
                           <li><i class="icon-calendar"></i><strong>Posted on:</strong> March 24, 2015<li>
                           <li><i class="icon-comment"></i><strong>Description:</strong> Crash, smash, and splash your way through a 5k course with larger-than-life obstacles and elements inspired by the hit TV show Wipeout! Take on the infamous Big Balls, Sweeper, Wrecking Balls, and Happy Endings! Hilarious thrills and magnificent spills await!<li>
                       </ul>
