--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -95,7 +95,7 @@
         ================================================== --> 
         <div class="row">
             <div class="span12">
-                <h2 class="title-bg"> Map of fun</h2>
+                <h2 class="title-bg"> Map of Fun</h2>
 
               <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" style="width: 100%; height: 40vw; border: none"></iframe>
             </div>
@@ -121,32 +121,38 @@
 
                     <!-- Gallery Item 1 -->
                     <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
+                        <a href="/locations/0">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/baltimoreMDLanding.jpg') }}" alt="Gallery">
                         </div>
-                      <span class="project-details"><a href="gallery-single.htm">Baltimore, Maryland</a>The Charm City.</span>
+                        </a>
+                      <span class="project-details"><a href="/locations/0">Baltimore, Maryland</a>The Charm City.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
                     <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
+                        <a href="/locations/1">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/clevelandOHLanding.jpg') }}" alt="Gallery">
                         </div>
-                      <span class="project-details"><a href="gallery-single.htm">Cleveland, Ohio</a>The Forest City.</span>
+                        </a>
+                      <span class="project-details"><a href="/locations/1">Cleveland, Ohio</a>The Forest City.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
                     <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
+                        <a href="/locations/2">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/dallasTXLanding.jpg') }}" alt="Gallery">
                         </div>
-                      <span class="project-details"><a href="gallery-single.htm">Dallas, Texas</a>Home of the Cowboys.</span>
+                        </a>
+                      <span class="project-details"><a href="/locations/2">Dallas, Texas</a>Home of the Cowboys.</span>
                     </li>
                 </ul>
             </div>
