added total commits to the bottom of the about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -276,7 +276,7 @@
                 </div>
             </div>
             <div>
-                <p>Total Github Commits 270</p>
+                <p><strong>Total Github Commits:</strong> 270</p>
             </div>
 
             <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
