--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="ChallengeModule" ng-controller="ChallengeGetter">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Fun Runs 2015: Challenges</title>
@@ -27,13 +27,26 @@
 
 <!-- JS
 ================================================== -->
+<script src="{{ url_for('static', filename='angular/angular.js') }}"></script>
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="{{ url_for('static', filename='js/jquery.easing.1.3.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.quicksand.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.custom.js') }}"></script>
+<script>
+  var myApp = angular.module('ChallengeModule', [], function($interpolateProvider) {
+      $interpolateProvider.startSymbol('[[');
+      $interpolateProvider.endSymbol(']]');
+  });
 
+  myApp.controller('ChallengeGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
+    $http.get("http://104.239.139.43:8000/api/challenges/").success(function(data) {
+      $scope.challenges = data.challenges;
+      console.log($scope.challenges);
+    });
+  }]);
+</script>
 
 </head>
 
@@ -105,44 +118,20 @@
             </ul> -->
 
             <div class="row clearfix">
-                <ul class="gallery-post-grid holder">
-
-                    <!-- Gallery Item 1 -->
-                    <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a href="/challenges/0">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
+              <ul class="gallery-post-grid holder">
+                <div ng-repeat="challenge in challenges">
+                  <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
+                      <a ng-href="http://104.239.139.43:8000/challenges/[[ challenge.id ]]">
+                        <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                            <img src="{{ url_for('static', filename='img/landing/challenges/oddGround1.jpg') }}" alt="Gallery">
+                          <img ng-src="[[challenge.landing_img]]" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/challenges/0">Running On Awkward Ground</a>Examples: Ice, Inflatable Balls, Mud</span>
+                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/challenges/[[ challenge.id ]]">[[challenge.name]]</a>Examples: [[challenge.flavors]]</span>
                     </li>
-
-                    <!-- Gallery Item 2 -->
-                    <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
-                      <a href="/challenges/1">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
-                        </span>
-                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                            <img src="{{ url_for('static', filename='img/landing/challenges/costume1.jpg') }}" alt="Gallery">
-                        </div>
-                      </a>
-                      <span class="project-details"><a href="/challenges/1">Running In A Costume</a>Examples: Mascots, Nude, Speedos, Costumes</span>
-                    </li>
-
-                    <!-- Gallery Item 3 -->
-                    <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
-                      <a href="/challenges/2">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
-                        </span>
-                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                            <img src="{{ url_for('static', filename='img/landing/challenges/cold1.jpg') }}" alt="Gallery">
-                        </div>
-                      </a>
-                      <span class="project-details"><a href="/challenges/2">Running In Cold Weather</a>Examples: Snow, Ice, Freezing Temperatures</span>
-                    </li>
-                </ul>
+                </div>
+              </ul>
             </div>
 
             <!-- Pagination -->
