--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="FunRunModule" ng-controller="FunRunGetter">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Fun Runs 2015: Fun Runs</title>
@@ -27,15 +27,30 @@
 
 <!-- JS
 ================================================== -->
+<script src="{{ url_for('static', filename='angular/angular.js') }}"></script>
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="{{ url_for('static', filename='js/jquery.easing.1.3.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.quicksand.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.custom.js') }}"></script>
+<script>
+  var myApp = angular.module('FunRunModule', [], function($interpolateProvider) {
+      $interpolateProvider.startSymbol('[[');
+      $interpolateProvider.endSymbol(']]');
+  });
+
+  myApp.controller('FunRunGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
+    $http.get("http://104.239.139.43:8000/api/funruns/").success(function(data) {
+      $scope.funruns = data.funruns;
+      console.log($scope.funruns);
+    });
+  }]);
+</script>
+
 </head>
 
-<body ng-app="FunRunModule" ng-controller="AllFunRunsGetter"> 
+<body> 
   <div class="color-bar-1"></div>
     <div class="color-bar-2 color-bg"></div>
     
@@ -101,45 +116,21 @@
                 <li><a href="#" class="video">Video</a></li>
                 <li><a href="#" class="web">Web</a></li>
             </ul> -->
-
             <div class="row clearfix">
-                <ul class="gallery-post-grid holder">
-                    <!-- Wipeout -->
-                    <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a href="/funruns/0">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
+              <ul class="gallery-post-grid holder">
+                <div ng-repeat="run in funruns">
+                  <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
+                      <a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">
+                        <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                          <img src="{{ url_for('static', filename='img/landing/funruns/wipeoutLanding.jpg') }}" alt="Gallery">
+                          <img ng-src="[[run.landing_img]]" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5K course<br/>Try out the obstacles from the hit TV show "Wipeout"!</span>
+                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">[[run.name]]</a>[[run.distance]] course<br/>[[run.short]]</span>
                     </li>
-
-                    <!-- Christmas Story -->
-                    <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
-                      <a href="/funruns/1">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
-                        </span>
-                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                          <img src="{{ url_for('static', filename='img/landing/funruns/christmasStoryRunLanding.jpg') }}" alt="Gallery">
-                        </div>
-                      </a>
-                      <span class="project-details"><a href="/funruns/1">A Christmas Story Run</a>5K/10K course<br/>Experience the classic movie "A Christmas Story" in person.</span>
-                    </li>
-
-                    <!-- Dallas Turkey Trot -->
-                    <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
-                      <a href="/funruns/2">
-                        <span class="gallery-hover-3col hidden-phone hidden-tablet">
-                        </span>
-                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
-                          <img src="{{ url_for('static', filename='img/landing/funruns/dallasTurkeyTrotLanding.jpg') }}" alt="Gallery">
-                        </div>
-                      </a>
-                      <span class="project-details"><a href="/funruns/2">Dallas Turkey Trot</a>5K/8K course<br/>Run in the largest Thanksgiving Day event of its kind.</span>
-                    </li>
-                </ul>
+                </div>
+              </ul>
             </div>
 
             <!-- Pagination -->
